[project]
name = "comfyui_zenid"
description = "Inspired by [a/InstantID](https://github.com/instantX-research/InstantID) and [a/InstantID Comfy](https://github.com/cubiq/ComfyUI_InstantID)\nThis ZenID Node has been refactored for specialized tasks like Face Swap"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/vuongminh1907/ComfyUI_ZenID"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "vuongminh1907"
DisplayName = "ComfyUI_ZenID"
Icon = ""
